--- a/README
+++ b/README
@@ -1,63 +1,41 @@
 # 🏛️ AI Museum Curator — Greek Mythology Edition
 
-A Streamlit-based interactive web application that uses the MET Museum Open API and GPT-based AI models to generate professional-level curatorial explanations for artworks related to Ancient Greek mythology.
-
-Users can explore mythological figures, view real museum artworks, and receive AI-generated curatorial analyses.
+A Streamlit web application that lets users explore Greek gods, heroes, and mythic creatures through real museum artworks (MET Museum API) and AI-generated curatorial texts.
 
 ---
 
-# 🎮 How to Use
+## 🎮 Quick Start — How to Use
 
-1. **Go to the “Greek Myth Explorer” tab**  
-2. Select a mythological figure from the dropdown (e.g., Athena, Medusa)  
-3. Read the AI-generated myth background  
-4. View related artworks fetched from the MET Museum API  
-5. Choose one artwork → switch to **Artwork Viewer** for full analysis  
-6. For two-artwork comparison → use **Comparative Analysis**
-
----
-
-# ✨ Features
-
-### 🔱 Greek Myth Explorer
-- Dropdown selection (no need for manual input)  
-- AI-generated myth explanation  
-- MET artworks listing  
-
-### 🎨 Artwork Viewer
-- High-resolution artwork display  
-- Metadata (title, artist, date, medium)  
-- Curator-style AI analysis:
-  - Overview  
-  - Historical context  
-  - Iconography & symbolism  
-  - Myth interpretation  
-  - Exhibition recommendation  
-
-### ⚖️ Comparative Analysis
-- Compare any two MET artworks using Object IDs  
-- AI-generated side-by-side interpretation  
-
-### 📚 Course Background Tab
-- Summaries of:
-  - AI Museum Curator  
-  - Generative AI for Art Creation  
-  - Multimodal Prompting  
-  - Art Data Visualization  
-  - Creative Coding: Generative Poster 2.0  
+1. Open the **Greek Deities** tab.  
+2. Select a figure from the dropdown (comprehensive list).  
+3. Read the short fixed bio. Click **"Expand description with AI"** to generate a museum-style introduction.  
+4. Click **"Fetch related works from MET"** to retrieve artworks related to the figure (aliases included).  
+5. Go to **Works & Analysis**, click a thumbnail to select an artwork, and then click **"Generate AI Curatorial Analysis"**.  
+6. To compare two works, use the **Compare** tab and enter MET Object IDs.
 
 ---
 
-# 🧠 Technologies Used
-| Tool | Purpose |
-|------|---------|
-| **Streamlit** | Web interface |
-| **OpenAI API** | Curatorial text generation |
-| **MET Museum API** | Artwork metadata & images |
-| **Python** | Backend logic |
-| **Pillow** | Image handling |
-| **dotenv** | API key management |
+## ✅ Features
+
+- Dropdown selection of Greek gods/heroes/creatures (no manual typing).  
+- Fixed short bios + AI expansion for richer myth background.  
+- Automatic MET searches using multiple aliases for better recall.  
+- Thumbnail gallery of related artworks and high-resolution viewer.  
+- AI-generated curator-style analysis with sections: Overview, Context, Iconography, Myth Reading, Exhibition Recommendation.  
+- Two-artwork comparative analysis.  
+- Course materials link to provided slides.
+
+**Course slides (uploaded)**: `/mnt/data/LN_-_Art_and_Advanced_Big_Data_-_W12_-_Designing_%26_Implementing_with_AI (1).pdf`
 
 ---
 
-# 📂 Project Structure
+## 🧠 Technical Stack
+
+- Streamlit (frontend)  
+- OpenAI (curatorial text generation)  
+- MET Museum Open API (art metadata & images)  
+- Python, requests, Pillow, python-dotenv
+
+---
+
+## 📂 Files
