--- a/README
+++ b/README
@@ -1,46 +1,58 @@
 # 🏛️ AI Museum Curator — Greek Mythology Edition
 
-Interactive Streamlit web app that combines MET Museum data with OpenAI to create curator-quality artwork interpretations and a rich interactive zone.
+Interactive Streamlit app that combines the MET Museum Open API with OpenAI to provide curator-style interpretations of artworks and a hands-on interactive zone for users.
 
 ---
 
-## 🎮 Quick Start — How to Use
+## ✅ Key features
 
-1. Open the **Greek Deities** tab.  
-2. Select a figure from the dropdown. Read the short fixed bio. Click **"Expand description with AI"** to get a museum-style introduction.  
-3. Click **"Fetch related works from MET"** to gather candidate artworks.  
-4. Go to **Works & Analysis**, choose a thumbnail, then click **"Generate AI Curatorial Analysis"**.  
-5. Explore **Interactive Art Zone** for hands-on tools:
-   - Detail & Symbolism (ask about visual elements)
-   - Style Analyzer (upload a sketch/photo for style matching)
-   - Myth Identifier (describe a scene to identify the deity)
-   - Which God Are You? (short personality quiz)
-   - Myth Image Generator (AI image from text prompt)
+- Select a Greek god/hero/creature and read a short fixed bio (optionally expand via AI).  
+- Fetch related artworks from the MET Museum and browse thumbnails.  
+- View high-resolution images and AI-generated curator analyses.  
+- Interactive Art Zone:
+  - Detail & Symbolism (ask about visual details)
+  - Style Analyzer (upload a sketch/photo and get style hints)
+  - Myth Identifier (one-sentence description → AI identifies likely deity and fetches artworks)
+  - Which Greek Deity Are You? (short personality quiz → AI maps to a deity and suggests artworks)
 
 ---
 
-## ✅ Key Features
+## 🔒 OpenAI API Key
 
-- Dropdown selection of Greek figures with fixed bios + AI expansion.  
-- Automatic MET searches using aliases for broader recall.  
-- Thumbnail gallery and high-resolution artwork viewer.  
-- AI-generated curator analyses with structured sections.  
-- Interactive Art Zone with multiple user-facing tools (detail analysis, style-matching, myth ID, personality quiz, DALL·E image generation).
+To enable AI features, provide an OpenAI API key either as an environment variable `OPENAI_API_KEY` or by entering your key in the Home page input box (stored only in your session). The app will not save your key on a server.
 
 ---
 
-## 🧠 Technical Stack
+## 🧭 How to Use (Step-by-step)
 
-- Streamlit (UI)  
-- OpenAI (Chat + Image APIs)  
-- MET Museum Open API (art data)  
-- Python (requests, Pillow, dotenv)
+1. Run the app (local) or open the deployed URL.  
+2. On **Home**, enter your OpenAI API key to enable AI functions.  
+3. Go to **Greek Deities**: pick a figure → click **Expand description with AI** (optional) → click **Fetch related works**.  
+4. Go to **Works & Analysis**: browse thumbnails → select an artwork → click **Generate AI Curatorial Analysis**.  
+5. Visit **Interactive Art Zone** for deeper interactions:
+   - Describe a scene → AI will identify the most likely deity and fetch related works.  
+   - Take the personality quiz to discover your mythic match and see recommended works.  
+   - Upload sketches to get style-matching feedback.  
+   - Ask about a visual detail to get curator-style explanation.
 
 ---
 
-## ⚙️ Setup & Run Locally
+## Sources & Acknowledgments
 
-1. Create and activate virtual environment:
+- Metropolitan Museum of Art — Open Access API (collectionapi.metmuseum.org)  
+- OpenAI (GPT models) for text generation  
+- This project synthesizes museum practice, art history, and generative AI for educational purposes.
+
+Course slides (provided): `/mnt/data/LN_-_Art_and_Advanced_Big_Data_-_W12_-_Designing_%26_Implementing_with_AI (1).pdf`
+
+---
+
+## Setup & Run locally
+
+1. Create virtual environment and install:
 ```bash
 python -m venv venv
-source venv/bin/activate   # or venv\Scripts\activate on Windows
+source venv/bin/activate    # mac / linux
+# venv\Scripts\activate     # windows
+pip install -r requirements.txt
+
