--- a/README
+++ b/README
@@ -1,20 +1,43 @@
 # 🏛️ AI Museum Curator — Greek Mythology Edition
 
-Interactive Streamlit app connecting MET Museum data with OpenAI to produce curator-level artwork analyses and interactive experiences.
+This Streamlit web application combines:
+- MET Museum Open API (real artworks)
+- Greek mythology data
+- AI curator explanations
+- A full hierarchical genealogy tree (“Mythic Lineages”)
 
-## What’s special in this version
-- Greek Deities: fetch all relevant MET works that **actually have accessible images** (no fake images). You can increase `Max results` slider up to 200 to try more records.
-- Works & Analysis: **left–right layout** (left large image ~600px, right structured metadata & AI content). When a work is selected, gallery hides (focus view). Click **Back to Gallery** to return.
-- Robust image fallback: primaryImageSmall → primaryImage → additionalImages.
-- Interactive Art Zone: detail Q&A, sketch style hints, myth ID, Jungian Myth Archetype Matcher, image generation.
+---
 
-## Quick start
-1. `pip install -r requirements.txt`  
-2. `streamlit run app.py`  
-3. On Home page paste your OpenAI API Key (session-only) or set `OPENAI_API_KEY` in environment/Secrets.
-4. Go to **Greek Deities** → choose figure → Fetch related works → select thumbnail → view detail in **Works & Analysis**.
+## 🔧 How to Run
 
-## Course slides (reference)
-The app references the course PDF uploaded during development at:
+### 1. Install dependencies
+
+
+### 2. Run Streamlit
+
+
+### 3. Enter Your API Key
+Open the app → Sidebar → Enter OpenAI API Key.
+
+---
+
+## 🧠 Features
+
+### **1. Greek Deities Explorer**
+Select a deity → App fetches real MET artworks → AI generates explanations.
+
+### **2. Works & Analysis**
+Search by keyword → browse images, metadata, curator notes.
+
+### **3. Mythic Lineages**
+A hierarchical, museum-style genealogy:
+Primordial gods → Titans → Olympians → Semi-gods → Heroes.
+
+---
+
+## 🎨 Data Source
+MET Museum Open API  
+https://metmuseum.github.io
+
 
 
