--- a/README
+++ b/README
@@ -1,17 +1,30 @@
 # AI Museum Curator — Greek Mythology Edition
 
-## Overview
-This Streamlit app allows users to explore Greek gods, heroes, creatures, and related works via The MET Open API. It includes curator-level insights and AI-generated content (optional with OpenAI API key).
+This Streamlit app allows users to explore Greek gods, heroes, and mythic creatures through major artworks, manuscripts, books, and cultural artifacts. Optional AI features provide curator-level explanations.
 
 ## Features
-- **Greek Deities & Works**: Search a mythological figure and view artworks, manuscripts, books, and artifacts.  
-- **AI-enhanced content**: Expanded biographies, artwork overview, historical context, and iconography.  
-- **Interactive Art Zone**: Ask questions about visual details or identify mythic scenes.  
-- **Grid / Expander UI**: Clean card-style layout with collapsible details.
 
-## Installation
-```bash
-pip install -r requirements.txt
-streamlit run app.py
+### Home
+- Paste your OpenAI API Key to enable AI features.
+- Step-by-step guide for exploring Greek mythology content and artworks.
+- Instructions for viewing detailed work cards with AI-generated descriptions.
 
+### Greek Deities / Heroes / Creatures
+- Search or select mythic figures.
+- Default display of the most famous works related to the figure (artworks, manuscripts, books).
+- Works are shown in card/grid style with expandable details.
+- AI-generated overview, historical/artistic context, and iconography.
 
+### Interactive Art Zone
+- **Myth-based**: Describe a scene or motif, get the most likely Greek myth character.
+- **Personality Archetype Matcher**: Short quiz mapping you to a Greek myth archetype.
+- Category selection presented as clear small cards.
+
+### Big Data Analysis
+- **Time dimension**: Work distribution by century/era, artist active period trends.
+- **Medium/type dimension**: Cross-medium distribution, material analysis.
+- **Style/genre**: Artistic style distribution, association of style with mythic themes.
+
+### Notes
+- Works failing to load (HTTP 404 or other errors) are automatically skipped.
+- Interactive and AI features require an OpenAI API key.
